refactor images on home view

--- a/app/views/home.jade
+++ b/app/views/home.jade
@@ -4,19 +4,15 @@
     h3 313 is 220
     h3 Bringing Northern Cooking to the South
   .row.home-info
-    .col-md-6.home-left
-      img.img-rounded.img-responsive(src="images/vaughan_with_grill.jpg" alt='Vaughan with Grill' width='400' height='300')
-    .col-md-6
-      h1 Vaughan cooks it up...
-  .row.home-info
-    .col-md-6.home-right
-      h1 over an open flame...
-    .col-md-6
-      img.img-rounded.img-responsive(src="images/open_fire.jpg" alt='Open Fire' width='400' height='300')
-  .row.home-info
-    .col-md-6.home-left
-      img.img-rounded.img-responsive(src="images/happy_customers.jpg" alt='Happy Customers' width='400' height='300')
-    .col-md-6
-      h1 and serves it up fresh for you!
-
+    .col-md-2
+    .col-md-8
+      .row
+        #vaughan-grill.col-md-6.home-info-image
+          h1 Vaughan cooks it up...
+        #open-fire.col-md-6.home-info-image
+          h1 over an open flame...
+      .row
+        #happy-customers.col-md-12.home-info-image
+          h1 and serves it up fresh
+    .col-md-2
   
