create public folder with content changes

--- a/app/views/home.jade
+++ b/app/views/home.jade
@@ -7,12 +7,12 @@
     .col-md-2
     .col-md-8
       .row
-        #vaughan-grill.col-md-6.home-info-image
-          h1 Vaughan cooks it up...
+        #happy-customers.col-md-6.home-info-image
+          h1 happy faces
         #open-fire.col-md-6.home-info-image
-          h1 over an open flame...
+          h1 open flames
       .row
-        #happy-customers.col-md-12.home-info-image
-          h1 and serves it up fresh
+        #vaughan-grill.col-md-12.home-info-image
+          h1 with Vaughan at the Grill
     .col-md-2
   
