--- a/public/views/home.html
+++ b/public/views/home.html
@@ -9,16 +9,16 @@
     <div class="col-md-2"></div>
     <div class="col-md-8">
       <div class="row">
-        <div id="vaughan-grill" class="col-md-6 home-info-image">
-          <h1>Vaughan cooks it up...</h1>
+        <div id="happy-customers" class="col-md-6 home-info-image">
+          <h1>happy faces</h1>
         </div>
         <div id="open-fire" class="col-md-6 home-info-image">
-          <h1>over an open flame...</h1>
+          <h1>open flames</h1>
         </div>
       </div>
       <div class="row">
-        <div id="happy-customers" class="col-md-12 home-info-image">
-          <h1>and serves it up fresh</h1>
+        <div id="vaughan-grill" class="col-md-12 home-info-image">
+          <h1>with Vaughan at the Grill</h1>
         </div>
       </div>
     </div>
